# python-project-lvl2

./: .codeclimate.yml  .flake8  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: hexlet-check.yml  linter.yml  python_package.yml
gendiff/: __init__.py  cli.py  diff_structure.py  file_parser.py  gen_diff.py  parse_files.py
gendiff/formaters/: __init__.py  facade.py  helpers.py  json.py  json_format.py  plain.py  plain_format.py  stylish.py  stylish_format.py
gendiff/scripts/: gendiff.py
tests/: test_diff.py
tests/fixtures/: before2.json  sample_nested_result_json.txt  sample_result2.txt
