[tool.poetry]
name = "hexlet-code"
version = "0.3.12"
description = ""
authors = ["sinist3rr <darkfloki@protonmail.com>"]
repository = "https://github.com/sinist3rr/python-project-lvl2"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.6"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^6.1.0"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
